btn fix on mobile version

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -9,6 +9,7 @@
     padding: 1.5rem 3rem;
     font-size: 1.5rem;
     font-weight: 500;
+    max-width: 300px;
     line-height: 1.375rem;
     text-align: center;
     border-radius: 2.25rem;
@@ -22,10 +23,13 @@
     }
 
     &--sm {
-        padding: .8rem 1.8rem;
-        font-size: 1.3rem;
-        font-weight: 500;
-        border-radius: 1.8rem;
+        @media screen and (min-width: 992px) {
+            padding: .8rem 1.8rem;
+            font-size: 1.3rem;
+            font-weight: 500;
+            border-radius: 1.8rem;
+        }
+
     }
 }
 
@@ -242,9 +246,11 @@
     justify-content: center;
     align-items: center;
 }
+
 .modal__close-btn {
     opacity: .5;
     padding: .5rem;
+
     @media screen and (max-width: 768px) {
         max-width: 30px;
     }
@@ -265,23 +271,28 @@
         width: 100%;
     }
 }
+
 .show {
     visibility: visible;
     background-color: rgba(0, 0, 0, 0.5);
 }
-.modal__wrap.show .modal{
+
+.modal__wrap.show .modal {
     opacity: 1;
 }
+
 .modal__content {
     align-items: center;
     gap: 2rem;
     text-align: center;
 }
+
 .modal__control {
     display: flex;
     justify-content: flex-end;
     padding-bottom: 1rem;
 }
+
 .modal__body {
     display: flex;
     flex-direction: column;
@@ -290,10 +301,12 @@
     justify-content: space-between;
     margin-bottom: 2rem;
 }
+
 .modal__title {
     font-weight: 900;
     font-size: 1.5rem;
 }
+
 .modal__text {
     font-size: 1.2rem;
 }
